# gtest-ci-test

./: LICENSE  README.md
.github/workflows/: googletest.yaml
test/: CMakeLists.txt
test/something/: CMakeLists.txt  test_something.cpp
